--- a/src/main/resources/templates/user/user-add.html
+++ b/src/main/resources/templates/user/user-add.html
@@ -175,8 +175,8 @@
                             <th width="30%"></th>
                         </tr>
                         <tr>
-                            <td>id：</td>
-                            <td><input type="text" value="" class="form-control"></td>
+                            <td hidden>id：</td>
+                            <td hidden><input type="text" value="" class="form-control"></td>
                             <td>姓名：</td>
                             <td><input type="text" value="" class="form-control"></td>
                         </tr>
