--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
 <head>
     <meta charset="utf-8">
     <title>信贷系统</title>
@@ -10,100 +10,18 @@
 
     <link rel="stylesheet" type="text/css" href="../static/lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../static/lib/font-awesome/css/font-awesome.css">
-
     <script src="../static/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
-
     <link rel="stylesheet" type="text/css" href="../static/css/theme.css">
     <link rel="stylesheet" type="text/css" href="../static/css/premium.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/main.css">
+
+    <script type="text/javascript" src="../static/lib/angular-1.5.5/angular.min.js"></script>
+    <script type="text/javascript" src="../static/lib/angular-1.5.5/angular-route.min.js"></script>
+    <script type="text/javascript" src="../static/js/main.js"></script>
+    <script type="text/javascript" src="../static/js/signIn.js"></script>
 
 </head>
 <body class=" theme-blue">
-
-<!-- Demo page code -->
-
-<script type="text/javascript">
-    $(function () {
-        var match = document.cookie.match(new RegExp('color=([^;]+)'));
-        if (match) var color = match[1];
-        if (color) {
-            $('body').removeClass(function (index, css) {
-                return (css.match(/\btheme-\S+/g) || []).join(' ')
-            })
-            $('body').addClass('theme-' + color);
-        }
-
-        $('[data-popover="true"]').popover({html: true});
-
-    });
-</script>
-<style type="text/css">
-    #line-chart {
-        height: 300px;
-        width: 800px;
-        margin: 0px auto;
-        margin-top: 1em;
-    }
-
-    .navbar-default .navbar-brand, .navbar-default .navbar-brand:hover {
-        color: #fff;
-    }
-    .panel-head{
-        height: 12rem;
-        background-image: url("../static/image/fintech.jpg");
-    }
-    .panel-head p{
-        color: white;
-        display: block;
-    }
-    .rect-line{
-        padding: 2rem;
-        border: 1px solid whitesmoke;
-    }
-    .tipsfather{
-        position: relative;
-    }
-    .tips {
-        position: absolute;
-        padding: 0px 10px;
-        height: 40px;
-        line-height: 40px;
-        background-color: #3a4a53;
-        border-radius: 5px;
-        margin-right: -120px;
-        margin-top: 20px;
-        top: 0;
-        right: 0;
-        color: whitesmoke;
-        font-size: 16px;
-        transition: margin-left linear 0.3s;
-    }
-    .tips:after {
-        content: "";
-        position: absolute;
-        top: 50%;
-        left: 0;
-        border: 10px solid transparent;
-        border-right: 15px solid #3a4a53;
-        transform: translate(-100%, -50%);
-    }
-    .activity{
-        border-color: #66afe9;
-        outline: 0;
-        -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
-        box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
-    }
-</style>
-
-<script type="text/javascript">
-    $(function () {
-        var uls = $('.sidebar-nav > ul > *').clone();
-        uls.addClass('visible-xs');
-        $('#main-menu').append(uls.clone());
-
-        $('input[name="userAccount"]').focus();
-    });
-</script>
-
 
 <!--[if lt IE 7 ]>
 <body class="ie ie6"> <![endif]-->
@@ -125,9 +43,9 @@
 
     </div>
 </div>
-</div>
 
-<div class="dialog">
+
+<div class="dialog" ng-controller="signInCtrl">
     <div class="panel panel-default">
             <div class="panel-head"></div>
         <div class="rect-line">
@@ -135,15 +53,15 @@
                 <form>
                     <div class="form-group tipsfather">
                         <label>账号</label>
-                        <input type="text" class="form-control span12 activity" name="userAccount">
+                        <input type="text" class="form-control span12" name="userAccount" ng-model="userAccount">
                         <span class="tips"><span></span> 请输入账号  </span>
                     </div>
                     <div class="form-group tipsfather">
                         <label>密码</label>
-                        <input type="password" class="form-control span12 activity" name="userPwd">
+                        <input type="password" class="form-control span12" name="userPwd" ng-model="userPwd">
                         <span class="tips"><span></span> 请输入密码  </span>
                     </div>
-                    <a class="btn btn-primary pull-right" href="user/users.html">登录</a>
+                    <a class="btn btn-primary pull-right" href="" ng-click="signIn()">登录</a>
                     <div class="clearfix"></div>
                 </form>
             </div>
@@ -153,15 +71,7 @@
 </div>
 
 
-<script src="../static/lib/bootstrap/js/bootstrap.js"></script>
-<script type="text/javascript">
-    $("[rel=tooltip]").tooltip();
-    $(function () {
-        $('.demo-cancel-click').click(function () {
-            return false;
-        });
-    });
-</script>
+
 
 
 </body>
