--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -37,7 +37,7 @@
 
 <div class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
-        <a class="" href="index.html"><span class="navbar-brand"> 信贷系统</span></a></div>
+        <a class="" href="index.html"><span class="navbar-brand"> 登录页面</span></a></div>
 
     <div class="navbar-collapse collapse" style="height: 1px;">
 
@@ -50,18 +50,19 @@
             <div class="panel-head"></div>
         <div class="rect-line">
             <div class="panel-body">
-                <form>
+                <form name="loginForm" novalidate>
                     <div class="form-group tipsfather">
                         <label>账号</label>
-                        <input type="text" class="form-control span12" name="userAccount" ng-model="userAccount">
-                        <span class="tips"><span></span> 请输入账号  </span>
+                        <input type="text" class="form-control span12" name="userAccount" ng-model="formData.userAccount" required>
+                        <!--标签在不为空且被编辑过显示-->
+                        <span class="tips" ng-show="loginForm.userAccount.$error.required && loginForm.userAccount.$pristine == false"><span></span> 请输入账号  </span>
                     </div>
                     <div class="form-group tipsfather">
                         <label>密码</label>
-                        <input type="password" class="form-control span12" name="userPwd" ng-model="userPwd">
-                        <span class="tips"><span></span> 请输入密码  </span>
+                        <input type="password" class="form-control span12" name="userPwd" ng-model="formData.userPwd" required>
+                        <span class="tips" ng-show="loginForm.userPwd.$error.required && loginForm.userPwd.$pristine == false"><span></span> 请输入密码  </span>
                     </div>
-                    <a class="btn btn-primary pull-right" href="" ng-click="signIn()">登录</a>
+                    <a class="btn btn-primary pull-right" href="" ng-click="signIn()" ng-hide="loginForm.userAccount.$error.required || loginForm.userPwd.$error.required">登录</a>
                     <div class="clearfix"></div>
                 </form>
             </div>
@@ -70,9 +71,6 @@
     </div>
 </div>
 
-
-
-
-
 </body>
+
 </html>
