--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -4,6 +4,9 @@
     margin: 0px auto;
     margin-top: 1em;
 }
+#myForm{
+    text-align: center;
+}
 
 .navbar-default .navbar-brand, .navbar-default .navbar-brand:hover {
     color: #fff;
@@ -52,4 +55,16 @@
     outline: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+}
+.menuli{
+    list-style: none;
+    display: inline-block;
+}
+.menuli.active{
+    color: #ccc;
+}
+.menuli.active:before{
+    padding: 0 5px;
+    color: #ccc;
+    content: "/\00a0";
 }
